# gaze-detection

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.h  start.sh
camera/: capture.cpp  control.cpp  socket.cpp
config/calibration/: parameter.txt  v1.txt  v2.txt
data/: gaze.py  test.py
data/gaze/old_data/20211013/: gaze_20211013.txt
data/gaze/old_data/20211015/: readme.md
data/gaze/old_data/20211015/01/: gaze.txt  gaze_row_data.txt
data/gaze/old_data/20211015/02/: gaze.txt  gaze_row_data.txt
data/gaze/old_data/20211015/03/: gaze.txt  gaze_row_data.txt
data/gaze/old_data/20211015/04/: gaze.txt  gaze_row_data.txt
data/gaze/row/: gaze_row_data.txt
data/output/calibraion/calibration_test/: README.md
data/output/calibraion/gaze_detection/: README.md
data/output/gaze_detection/: README.md
data/output/gaze_detection/v0/: README.md
data/output/gaze_detection/v1/: README.md
data/output/gaze_detection/v2/: README.md
data/src/: README.md  analysis.py  calibration.py  ellipse.py  gaze.py  measure.py  param.txt  test.py  variance.py
docs/: pupil.md
docs/v1.0.0/: pupil.md
fove/: camera.cpp  camera.h  display.cpp  display.h
gaze/: gaze.cpp  gaze_main.cpp
src/: CMakeLists.txt  README.md  main.cpp  main.h
src/analysis/: gaze.py  utils.py
src/calibration/: calibration.cpp  calibration.h
src/camera/: README.md  camera.cpp  camera.h
src/cammount/: cammount.cpp  cammount.h  socket.cpp  socket.h  test.csv
src/fove/: README.md  camera.cpp  display.cpp  display.h  opengl.cpp  opengl.h
src/fove/camera/: README.md  camera.cpp  camera.h
src/fove/display/: display.cpp  display.h
src/fove/old_src/: display.cpp  display.h
src/gaze/: CMakeLists.txt  README.md  calibration.cpp  calibration.h  gaze.cpp  gaze.h  gaze_main.cpp  old.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h  utils.py  utils_main.cpp
